Do some cleanup
Signed-off-by: cmoulliard <cmoulliard@redhat.com>